<resources>
    <string name="app_name">DigitalOnGo</string>
    <string name="made_with_love_in_diego">صنع بحب في ديجو</string>
    <string name="detailsAbout1">محرك إبداعي يحلق في سماء الإبداع لنرتقي بشركائنا وأنشطتهم في فضاءات الإعلام الرقمي</string>
    <string name="detailsAbout2">نحن معكم نساعدكم على صياغة المحتوى من بداية الفكرة وحتى الظهور لعملائكم ليحقق محتواكم أمثل نتائج على القنوات والمنصات الإعلامية</string>
    <string name="detailsAbout3">العديد من الخدمات التي تخلق النجاح لكم</string>
    <string name="digital_marketing_company">شركة تسويق رقمي شركة تسويق رقمي</string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="sign_in_with_google">تسجيل دخول بجوجل</string>
    <string name="sign_up">إنشاء حساب</string>
    <string name="sent_succesfully">تم الإرسال بنجاح!</string>
    <string name="succesfully">نجاح!</string>
    <string name="check_email">الرجاء تفقد البريد الالكتروني لاإنشاء كلمة السر</string>
    <string name="cannot_get_email">لا يمكن الحصول على الايميل ؟</string>
    <string name="resend">إعادة الإرسال</string>
    <string name="confirm">تأكيد</string>
    <string name="send">إرسال</string>
    <string name="did_you_forget_password">هل نسيت كلمة المرور؟</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="full_name">الاسم كامل</string>
    <string name="enter_email">أدخل عنوان البريد الإلكتروني بالحقل</string>
    <string name="ok_change_password">تهانينا تم تغير كلمة السر بنجاح</string>
    <string name="change_password">تغير كلمة السر</string>
    <string name="new_password">كلمة السر الجديدة</string>
    <string name="password">كلمة السر</string>
    <string name="confirm_new_password">تأكيد كلمة السر الجديدة</string>
    <string name="enter_new_passwords_in_filed">أدخل كلمة السر الجديدة في الحقول</string>
    <string name="more_details">عرض التفاصيل</string>
    <string name="check_internet_connection">الرجاء التأكد من الاتصال بالانترنت</string>

    <string name="success">تم إضافة طلبك بنجاح</string>
    <string name="success_sending">تم إضافة طلبك بنجاح</string>
    <string name="error">الرجاء التواصل مع الدعم الفني</string>

    <string name="services">خدماتنا</string>
    <string name="the_services">الخدمات</string>
    <string name="articles">المقالات</string>
    <string name="profile">حسابي</string>
    <string name="more">المزيد</string>
    <string name="packages">الباقات</string>
    <string name="search_services">البحث عن خدمة</string>
    <string name="search_article">البحث عن مقالة</string>
    <string name="error_api">حدث مشكلة الرجاء التواصل مع الدعم الفني</string>
    <string name="person_name">الاسم الشخصي</string>
    <string name="mobile">رقم الهاتف</string>
    <string name="organization">المؤسسة /المنظمة / الفريق</string>
    <string name="details_project">تفاصيل المشروع</string>
    <string name="send_request">أرسل طلبك</string>
    <string name="start_build_project">لنبدأ في بناء مشروعكم ضع تفاصيل طلبكم سنراجعها ونجري تواصلنا سريعاَ</string>
    <string name="empty_edittext">الرجاء ملئ الحقل</string>
    <string name="browse_best_services">تصفح أفضل الخدمات</string>
    <string name="browse_best_packages">تصفح أفضل  الباقات</string>
    <string name="the_all">الكل</string>
    <string name="the_details">التفاصيل</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="text_contact_us">إذا كانت لدي مشكلة أو حلول يمكنك إرسال لنا رسالة وسوف نرد عليك في أقرب وقت</string>
    <string name="message">الرسالة</string>
    <string name="subscription">اشتراك</string>
    <string name="order_now">إطلب الأن</string>
    <string name="link_not_work">الرابط لا يعمل</string>
    <string name="sending">جاري الإرسال</string>
<!--    <string name="next">التالي</string>-->
    <string name="skip">تخطي</string>
<!--    static-->
    <string name="array_services">array_services</string>
    <string name="array_packages">array_packages</string>
    <string name="array_sliders">array_sliders</string>
    <string name="type_service">type_service</string>
    <string name="type_packages">type_packages</string>
    <string name="type">type</string>
    <string name="first_open">first_open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>