<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/style_screen"

        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/textView_purple_small"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            />
        <EditText
            android:id="@+id/et_email"
            style="@style/style_edittext"
            android:drawableLeft="@drawable/ic_baseline_email"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/textView_purple_small"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            />
        <EditText
            android:id="@+id/et_password"
            style="@style/style_edittext"
            android:drawableLeft="@drawable/ic_baseline_lock"

            />
        <TextView
            android:id="@+id/tv_forget_password"
            style="@style/textView_purple_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/did_you_forget_password" />

        <LinearLayout
            style="@style/button_purple_color_style"
            android:layout_marginTop="@dimen/_50sdp">

            <TextView
                style="@style/textView_white_small_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />
        </LinearLayout>

        <LinearLayout
            style="@style/button_purple_color_style"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/btn_gray"
            android:gravity="center"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google" />

            <TextView
                style="@style/textView_purple_small_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"

                android:text="@string/sign_in_with_google" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>