<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.SignUpTabFragment">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       style="@style/style_screen"

       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/full_name"
               style="@style/textView_purple_small"
               android:layout_gravity="end"
               android:layout_marginEnd="@dimen/_10sdp"
               android:layout_marginTop="@dimen/_10sdp"
               />

           <EditText
               style="@style/style_edittext"
               android:drawableLeft="@drawable/ic_baseline_person"

               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/email"
               style="@style/textView_purple_small"
               android:layout_gravity="end"
               android:layout_marginEnd="@dimen/_10sdp"
               android:layout_marginTop="@dimen/_10sdp"
               />
           <EditText
               style="@style/style_edittext"
               android:drawableLeft="@drawable/ic_baseline_email"

               />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/password"
               style="@style/textView_purple_small"
               android:layout_gravity="end"
               android:layout_marginEnd="@dimen/_10sdp"
               android:layout_marginTop="@dimen/_10sdp"
               />
           <EditText
               style="@style/style_edittext"
               android:drawableLeft="@drawable/ic_baseline_lock"

               />
           <LinearLayout
               android:layout_marginTop="@dimen/_50sdp"
               style="@style/button_purple_color_style"
               >

               <TextView
                   style="@style/textView_white_small_bold"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/sign_up" />
           </LinearLayout>
           <LinearLayout
               android:layout_marginTop="@dimen/_20sdp"
               style="@style/button_purple_color_style"
               android:backgroundTint="@color/btn_gray"
               android:padding="@dimen/_5sdp"
               android:layout_gravity="center"
               android:gravity="center"
               >
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_google"
                   />
               <TextView
                   style="@style/textView_purple_small_bold"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="@dimen/_10sdp"

                   android:text="@string/sign_in_with_google" />

           </LinearLayout>
       </LinearLayout>

   </LinearLayout>

</ScrollView>