<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.OkChangePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/ok"
            android:layout_marginTop="@dimen/_150sdp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/succesfully"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_24ssp"
            android:textColor="@color/purple_500"
            android:fontFamily="@font/tajawal_bold"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_change_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/grey"
            android:fontFamily="@font/tajawal_bold"
            android:layout_marginTop="@dimen/_15sdp"
            />

            <LinearLayout
                android:layout_marginTop="@dimen/_70sdp"
                style="@style/button_purple_color_style"
                >
                <TextView
                    style="@style/textView_white_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in" />
            </LinearLayout>


    </LinearLayout>

</ScrollView>