<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:gravity="top"

            >

            <TextView
                style="@style/textView_purple_medium_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/did_you_forget_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/enter_email"
                android:textColor="@color/grey"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView_purple_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/email"

                />

            <EditText
                style="@style/style_edittext"
                android:drawableLeft="@drawable/ic_baseline_email"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"

            >

            <LinearLayout
                android:id="@+id/btn_send"
                style="@style/button_purple_color_style"
                android:layout_gravity="bottom">

                <TextView
                    style="@style/textView_white_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>