<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connect_us.ContactUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <TextView
                style="@style/textView_purple_small_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/text_contact_us" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        style="@style/style_edittext_services"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:cardElevation="4dp">

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/person_name"
                            android:paddingEnd="@dimen/_10sdp"

                            />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/style_edittext_services"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:cardElevation="4dp">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/email"
                            android:paddingEnd="@dimen/_10sdp"

                            />
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        style="@style/style_edittext_services"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:cardElevation="4dp"

                        >

                        <EditText
                            android:id="@+id/et_message"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/message"
                            android:lines="8"
                            android:paddingEnd="@dimen/_10sdp"


                            />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:id="@+id/btn_send_message"
                        style="@style/button_purple_color_style"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:paddingStart="@dimen/_50sdp"
                        android:paddingEnd="@dimen/_50sdp">

                        <TextView
                            style="@style/textView_white_small_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/send" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>

        <include
            android:id="@+id/loading"
            layout="@layout/loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>