<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.auth.ChangePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/style_screen"
        android:weightSum="4"
        >
        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/logo"
            android:layout_weight="1"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_marginEnd="@dimen/_20sdp"
                style="@style/textView_purple_medium_bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_passwords_in_filed"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/grey"
                android:fontFamily="@font/tajawal_bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/textView_purple_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/password"

                    />

                <EditText
                    style="@style/style_edittext"
                    android:drawableLeft="@drawable/ic_baseline_lock"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textView_purple_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/new_password"

                    />

                <EditText
                    style="@style/style_edittext"
                    android:drawableLeft="@drawable/ic_baseline_lock"

                    />
            </LinearLayout>
        </LinearLayout>




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_gravity="center"

    >
    <LinearLayout
        android:id="@+id/btn_change_password"
        style="@style/button_purple_color_style"
        >

        <TextView
            style="@style/textView_white_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />
    </LinearLayout>

</LinearLayout>

    </LinearLayout>


</LinearLayout>
